--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
         type="text"
         name="payee"
         id="payee"
+        [value]="name"
         (input)="name = $event.target.value"
       />
     </div>
@@ -29,6 +30,7 @@
         type="date"
         name="date"
         id="date"
+        [value]="date"
         (input)="date = $event.target.value"
       />
     </div>
@@ -49,6 +51,7 @@
         type="text"
         name="payment"
         id="payment"
+        [value]="amount"
         (input)="setAmount($event.target.value)"
       />
     </div>
@@ -69,6 +72,7 @@
         type="text"
         name="height"
         id="height"
+        [value]="height"
         (input)="setHeight($event.target.value)"
       />
     </div>
@@ -90,6 +94,7 @@
         type="text"
         name="miles"
         id="miles"
+        [value]="miles"
         (input)="setMiles($event.target.value)"
       />
     </div>
@@ -101,6 +106,6 @@
       </div>
     </div>
   </div>
-</div>
 
-<div>{{ car | json }}</div>
+  <div>{{ car | json }}</div>
+</div>
